# instant_api

./: .gitignore  .travis.yml  README.md  make_release.sh  pyproject.toml  setup.cfg  tox.ini
instant_api/: __init__.py  instant_api.py  version.py
tests/: apispec.json  test_instant_api.py
