[metadata]
name = instant_api
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Instantly create an HTTP API with automatic type conversions, JSON RPC, and a Swagger UI. Just add methods!
url = http://github.com/alexmojaki/instant_api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = instant_api
install_requires = flasgger; json-rpc; datafunctions; apispec
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
include_package_data = True
tests_require = pytest; instant_client[requests]; littleutils

[options.extras_require]
tests = pytest; instant_client[requests]; littleutils
client = instant_client[requests]
